# donut-decryptor

./: .gitignore  README.md  setup.cfg  setup.py
donut_decryptor/: cli.py  definitions.py  donut_decryptor.py
donut_decryptor/data/: rules.yar
samples/: v092.7z  v1.7z
