[metadata]
name = donut_decryptor
author = Volexity
author_email = threatintel@volexity.com
description = Decryptor for files containing Donut shellcode

[flake8]
max-line-length = 100

[options]
install_requires = 
    aplib  # https://github.com/snemes/aplib
    chaskey  # https://github.com/volexity/chaskey-lts
    lznt1  # https://github.com/you0708/lznt1/
    yara-python >= 4.3.0 # https://github.com/VirusTotal/yara-python
packages =
    donut_decryptor/
    donut_decryptor/data
python_requires = >= 3.7

[options.package_data]
* = *.yar

[options.entry_points]
console_scripts = 
    donut-decryptor = donut_decryptor.cli:run
